@@ -18,26 +18,23 @@ ghex/gnome-support.c
 ghex/main.c
 ghex/ui.c
 gncal/calobj.c
-gncal/clist.c
 gncal/eventedit.c
 gncal/getdate.c
 gncal/getdate.y
 gncal/gncal-day-view.c
 gncal/gncal-full-day.c
 gncal/gncal-todo.c
-gncal/gncal.c
 gncal/gnome-cal.c
 gncal/gnome-month-item.c
-gncal/gnomecard/gnomecard.c
 gncal/goto.c
 gncal/main.c
-gncal/objedit.c
 gncal/popup-menu.c
 gncal/prop.c
 gncal/timeutil.c
 gncal/versit/vcc.c
 gncal/versit/vcc.y
 gncal/versit/vobject.c
+gncal/gnomecard/gnomecard.c
 gsearchtool/gsearchtool.c
 gstripchart/gstripchart.c
 gtop/details.c
