@@ -1,3 +1,7 @@
+1998-08-20  Federico Mena Quintero  <federico@nuclecu.unam.mx>
+
+	* POTFILES.in: Sanitized for gnomecal.
+
 1998-08-19  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>
 
 	* pt.po: Updated.
